# briefcase-p4a-template

./: README.md  cookiecutter.json
{{cookiecutter.app_name}}/: briefcase.toml  pyproject.toml
